# rest-by-django

./: README.md  authors.csv  main.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
docs/: about.md  index.md  sobre.md
docs/Project_Structure/: command.md  crud.md  getting_started.md  tests.md
docs/contribuir/: eventos.md
pyprg/: settings.py  urls.py
pyprg/core/: admin.py  models.py  urls.py  views.py
pyprg/core/management/commands/: import_authors.py
pyprg/core/migrations/: 0001_initial.py  0002_alter_author_options.py  0002_alter_author_options_alter_book_publication_year.py  0003_alter_book_publication_year.py  0004_alter_book_edition.py
pyprg/core/tests/: test_views.py
